--- a/_NOTES/1. EMAIL PASS VER AUTH.md
+++ b/_NOTES/1. EMAIL PASS VER AUTH.md
@@ -1,5 +1,9 @@
 # AUTHENTICATION WITH EMAIL PASSWORD AND EMAIL VERIFICATION
 
+NEXT AUTH DOESN'T IMPLEMENT THIS KIND OF AUTH (WE ONLY HAVE PASWORDLESS EMAIL AUTHENTICATION)
+
+THIS IS TUTORIAL THAT DOESN'T USE NEXT AUTH, I GUESS IT IS USING CUSTOM SOLUTION
+
 <https://www.youtube.com/watch?v=53uJ01cXDx0>
 
 <https://github.com/Jerga99/next-youtube-course>
