--- a/_NOTES/1. EMAIL PASS VER AUTH.md
+++ b/_NOTES/1. EMAIL PASS VER AUTH.md
@@ -7,3 +7,7 @@ THIS IS TUTORIAL THAT DOESN'T USE NEXT AUTH, I GUESS IT IS USING CUSTOM SOLUTION
 <https://www.youtube.com/watch?v=53uJ01cXDx0>
 
 <https://github.com/Jerga99/next-youtube-course>
+
+## SEE THIS ALSO
+
+<https://www.youtube.com/watch?v=76tKpVbjhu8&t=4s>
