--- a/_NOTES/1. EMAIL PASS VER AUTH.md
+++ b/_NOTES/1. EMAIL PASS VER AUTH.md
@@ -11,3 +11,7 @@ THIS IS TUTORIAL THAT DOESN'T USE NEXT AUTH, I GUESS IT IS USING CUSTOM SOLUTION
 ## SEE THIS ALSO
 
 <https://www.youtube.com/watch?v=76tKpVbjhu8&t=4s>
+
+## BEN AWAD USED NODMAILER IN THIS PROJECT
+
+<https://www.youtube.com/watch?v=OP39UioapL8>
