--- a/_NOTES/1. EMAIL PASS VER AUTH.md
+++ b/_NOTES/1. EMAIL PASS VER AUTH.md
@@ -15,3 +15,7 @@ THIS IS TUTORIAL THAT DOESN'T USE NEXT AUTH, I GUESS IT IS USING CUSTOM SOLUTION
 ## BEN AWAD USED NODMAILER IN THIS PROJECT
 
 <https://www.youtube.com/watch?v=OP39UioapL8>
+
+YOU CAN LOOK INTO THIS TOO
+
+<https://www.youtube.com/watch?v=76tKpVbjhu8>
