--- a/_NOTES/1. EMAIL PASS VER AUTH.md
+++ b/_NOTES/1. EMAIL PASS VER AUTH.md
@@ -19,3 +19,7 @@ THIS IS TUTORIAL THAT DOESN'T USE NEXT AUTH, I GUESS IT IS USING CUSTOM SOLUTION
 YOU CAN LOOK INTO THIS TOO
 
 <https://www.youtube.com/watch?v=76tKpVbjhu8>
+
+## THIS IS CUSTOM SOLUTION I SHOULS LOOK INTO
+
+<https://jasonwatmore.com/post/2020/04/22/react-email-sign-up-with-verification-authentication-forgot-password#account-verify-email-jsx>
